Bug 166922 - Font ignored when printing
Summary: Font ignored when printing
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: messageviewer (other bugs)
Version First Reported In: 1.2.9
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 202688 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-07-18 14:53 UTC by Janet
Modified: 2009-08-25 22:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2008-07-18 14:53:26 UTC
Version:           1.2.9 (using 3.5.9, Debian Package 4:3.5.9.dfsg.1-6 (lenny/sid))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.25-9.slh.1-sidux-686

I have configured kmail to use a tiny font size for printing to get more information on one page but kmail just ignores these settings. It doesn't matter which font and font size I try to use, it always uses the same standard font and size for printing.
Comment 1 Thomas McGuire 2008-07-18 18:32:24 UTC
See also bug 127777, somewhat related.
Comment 2 Janet 2009-02-07 19:40:48 UTC
Problem still exists in Kmail 1.9.9 - no matter if I use custom fonts or the default ones, Kmail always prints mails in the same huge font size which causes unnecessary waste of paper. Whereas in former Kmail versions there was a workaround (see Bug 106217) now there's no way to have any influence on the printing size though the Kmail option for the printing font size pretends it.

Maybe Bug 127777 is related (very odd "feature") - both could be solved if the user would be given back the control over the printing font size. 
Comment 3 FiNeX 2009-04-04 19:05:36 UTC
Confirmed in trunk too (r948595).
Comment 4 Martin Koller 2009-08-05 21:45:51 UTC
*** Bug 202688 has been marked as a duplicate of this bug. ***
Comment 5 Martin Koller 2009-08-25 22:52:04 UTC
SVN commit 1015553 by mkoller:

BUG: 166922

When not printing from kmail's separate reader window, use the font
specified in the font settings.


 M  +8 -2      kmcommands.cpp  
 M  +0 -7      kmreaderwin.cpp  
 M  +0 -2      kmreaderwin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1015553
Comment 6 Martin Koller 2009-08-25 22:53:29 UTC
SVN commit 1015554 by mkoller:

Backport r1015553 by mkoller from trunk to the 4.3 branch:

CCBUG: 166922

When not printing from kmail's separate reader window, use the font
specified in the font settings.



 M  +8 -2      kmcommands.cpp  
 M  +0 -7      kmreaderwin.cpp  
 M  +0 -2      kmreaderwin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1015554