BUG: 166922

When not printing from kmail's separate reader window, use the font
specified in the font settings.

svn path=/trunk/KDE/kdepim/; revision=1015553