kmreaderwin.cpp
@@ -1224,13 +1224,6 @@ void KMReaderWin::setOverrideEncoding( const QString & encoding )
   update( true );
 }
 
-
-void KMReaderWin::setPrintFont( const QFont& font )
-{
-
-  mCSSHelper->setPrintFont( font );
-}
-
 //-----------------------------------------------------------------------------
 const QTextCodec * KMReaderWin::overrideCodec() const
 {
